[package]
name = "hlist"
version = "0.2.0-alpha"
authors = ["Sgeo <sgeoster@gmail.com>"]
license = "MIT"
homepage = "https://github.com/Sgeo/hlist"
repository = "https://github.com/Sgeo/hlist"
description = "Heterogeneous list with type-directed search"
documentation = "http://sgeo.github.io/rustdoc/hlist/"