[package]
name = "hlist"
version = "0.1.2"
authors = ["Sgeo <sgeoster@gmail.com>"]
license = "MIT"
homepage = "https://github.com/Sgeo/hlist"
repository = "https://github.com/Sgeo/hlist"
description = "Heterogeneous list with type-directed search"
documentation = "https://docs.rs/hlist/0.1.2/"

[dependencies]
serde = { version = "^1.0", optional = true }
serde_derive = { version = "^1.0", optional = true }

[features]
default = ["with_serde"]

with_serde = ["serde", "serde_derive"]
